--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sobook",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "backpack",
@@ -20,5 +19,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
